Done, just cleaning up now

--- a/IotaWebApp.web/Views/Home/Index.cshtml
+++ b/IotaWebApp.web/Views/Home/Index.cshtml
@@ -56,7 +56,7 @@
     var discoverSubtitle = GetContentValue("DiscoverSubtitle") ?? "Find out who we are, why we do it and why we love what we do.";
     var buttonTealText = GetContentValue("ButtonTealText") ?? "WATCH THE VIDEO";
     var buttonMustardText = GetContentValue("ButtonMustardText") ?? "ABOUT iOTA";
-    var backgroundImage = GetContentValue("BackgroundImage") ?? "/assets/image1.png"; // New dynamic image variable
+    var backgroundImage = GetContentValue("BackgroundImage") ?? "/assets/image1.png";
 }
 
 <!-- Full-Width Hero Section Using Foundation XY Grid -->
